--- a/components/Modules/TextMultiVideo/textMultiVideo.module.scss
+++ b/components/Modules/TextMultiVideo/textMultiVideo.module.scss
@@ -2,7 +2,6 @@
 .textMulti {
   max-width: 100%;
   padding: 4rem 0 3rem;
-
 }
 
 .video {
@@ -26,4 +25,6 @@
   left: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  border-radius: var(--border-radius);
 }
